--- a/interface/interface.html
+++ b/interface/interface.html
@@ -5,10 +5,9 @@
 	<head>
 		<meta charset=utf-8 />
 		<title>TEJ3M Summative Control Interface</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"></script>
-		<script type="text/javascript" src="script.js"></script>
+		<link rel="stylesheet" href="lib/bootstrap.min.css">
+		<script src="/lib/jquery-3.3.1.min.js"></script>
+		<script src="script.js"></script>
 	</head>
 
 	<body>
@@ -17,13 +16,12 @@
 
 			<h1 style="margin-bottom: 50px">TEJ3M Summative Control Interface</h1>
 
-			<button id='forward' class="btn btn-dark btn-lg" style="margin: 1px"><i class="fas fa-arrow-up"></i></button>
+			<button id='forward' class="btn btn-dark btn-lg" style="margin: 1px; width: 200px">Forward</button>
 			<br />
-			<button id='left' class="btn btn-dark btn-lg"><i class="fas fa-arrow-left"></i></button>
-			<button class="btn btn-lg" style="visibility: hidden"><i class="fas fa-arrow-left"></i></button>
-			<button id='right' class="btn btn-dark btn-lg"><i class="fas fa-arrow-right"></i></button>
+			<button id='left' class="btn btn-dark btn-lg" style="margin: 1px; width: 200px">Left</button>
+			<button id='right' class="btn btn-dark btn-lg" style="margin: 1px; width: 200px">Right</button>
 			<br />
-			<button id='backward'class="btn btn-dark btn-lg"><i class="fas fa-arrow-down"></i></button>
+			<button id='backward'class="btn btn-dark btn-lg" style="margin: 1px; width: 200px">Backward</button>
 			
 		</div>
 
