--- a/interface/interface.html
+++ b/interface/interface.html
@@ -6,7 +6,7 @@
 		<meta charset=utf-8 />
 		<title>TEJ3M Summative Control Interface</title>
 		<link rel="stylesheet" href="lib/bootstrap.min.css">
-		<script src="/lib/jquery-3.3.1.min.js"></script>
+		<script src="lib/jquery-3.3.1.min.js"></script>
 		<script src="script.js"></script>
 	</head>
 
